# ChangeLog for sci-mathematics/jags
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/jags/ChangeLog,v 1.12 2013/02/21 13:32:18 jlec Exp $

  21 Feb 2013; Justin Lecher <jlec@gentoo.org> -jags-3.2.0.ebuild,
  jags-3.3.0.ebuild, metadata.xml:
  Use tc-getPKG_CONFIG from toolchain-funcs.eclass instead of plain pkg-config;
  drop old

  01 Dec 2012; Thomas Kahle <tomka@gentoo.org> jags-3.3.0.ebuild:
  marked x86 per bug 444058

  26 Nov 2012; Agostino Sarubbo <ago@gentoo.org> jags-3.3.0.ebuild:
  Stable for amd64, wrt bug #444058

*jags-3.3.0 (15 Oct 2012)

  15 Oct 2012; Thomas Kahle <tomka@gentoo.org> +jags-3.3.0.ebuild:
  Bump to 3.3.0 per bug 436942.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> jags-3.2.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  10 Feb 2012; Agostino Sarubbo <ago@gentoo.org> jags-3.2.0.ebuild:
  Stable for amd64, wrt bug #402953

  10 Feb 2012; Thomas Kahle <tomka@gentoo.org> jags-3.2.0.ebuild:
  added missing dep for doc USE-flag, x86 stable per bug 402953

*jags-3.2.0 (04 Jan 2012)

  04 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org> -jags-2.2.0.ebuild,
  -jags-3.0.0.ebuild, -jags-3.1.0.ebuild, +jags-3.2.0.ebuild:
  Version bump. Remove old.

*jags-3.1.0 (04 Sep 2011)

  04 Sep 2011; Sébastien Fabbro <bicatali@gentoo.org> +jags-3.1.0.ebuild:
  Version bump

*jags-3.0.0 (06 Aug 2011)

  06 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> +jags-3.0.0.ebuild:
  Version bump

  25 Feb 2011; Fabian Groffen <grobian@gentoo.org> jags-2.2.0.ebuild:
  Marked ~amd64-linux and ~x86-linux, bug #355983

  12 Feb 2011; Thomas Kahle <tomka@gentoo.org> +jags-2.2.0.ebuild,
  +metadata.xml:
  Imported from science overlay, fixes bug 317741.

*jags-2.2.0 (04 Dec 2010)

  04 Dec 2010; Sébastien Fabbro <bicatali@gentoo.org> +jags-2.2.0.ebuild,
  +metadata.xml:
  Initial import. Modififed ebuild from originally submitted by Xavier
  Fernández i Marín, bug #317741