@@ -1,0 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST gnome-nibbles-3.8.0.tar.xz 3904360 SHA256 bc1e4f687f1e794ef15a4162492154970300ac682378e59f9471327e5fd0d606 SHA512 c96e0d61b8ef57fee0a1451463b552643dc8477c89243e97383fcaad7a37f298e2678566590f00114df4e748e451c2cdde8653baeeedec54ba7355940c6c5ad9 WHIRLPOOL b3f76cc4bba7b0fe1b6daaa4d8c65f7ae76c1aa6353b9590ea16379a1bbe9369d97a781eb3f6df85d85f85e8ba9570d6fb0e303a6dbdf86b8315278730eac503
+EBUILD gnome-nibbles-3.8.0.ebuild 706 SHA256 9bd9740c533a6b9fdebc033f5676ef21711e4438d681d78a50cb1b0023c0c5b2 SHA512 55d9f981f49a75decdf24bf5b4fdb6938a4af82770de06b44591b8e630f1e76210e99161ab689758f700c30a4c418fd3cb2198e66b30c9d015b8a99cb8491d2c WHIRLPOOL 920ff4a4db6cba0c0ef44723a2cd82ff6441ab7aa0e3f3014584159c9452cf4082605bffc2c66df0f0d51dadaf9522e3747d0a3bf51c2d1ce57c3e586999a12c
+MISC ChangeLog 409 SHA256 e4152df8e89dd1729df3fc7cd3d30c61a28248de873a22d3935c8cd939080d45 SHA512 f6090a2ef2871d9aa4b0015a601882481abad2c26dffc03b170aac817530198366c045f4b95f7cae638709be95a97fb378e83b8018d7b18fcaa0f92147daafcf WHIRLPOOL 72939d2e1d1887799759a7f4c4c1b993b34a5a707331bec80ba28d2298deb17eced6dd8f8a7bdb70e505b511db8e2f16dc24b9aa9cedfca43fec38b9ce1abcdc
+MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iEYEAREIAAYFAlIJWpAACgkQ1fmVwcYIWAa1FQCffHnoElWGkeR7EI9gKYG7k9M1
+OA8An0nZzjAIW+9aSbGe6Ib/y8ErD9Z0
+=7fgy
+-----END PGP SIGNATURE-----
