@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup unpack
+DEPEND=dev-libs/glib:2 >=gnome-base/librsvg-2.32:2 >=media-libs/clutter-1:1.0 >=media-libs/clutter-gtk-0.91.6:1.0 >=media-libs/libcanberra-0.26[gtk3] >=x11-libs/gtk+-3.4:3 app-text/yelp-tools >=dev-util/intltool-0.35.0 sys-devel/gettext virtual/pkgconfig || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool app-arch/xz-utils >=sys-apps/sed-4 >=dev-util/intltool-0.50.2-r1
+DESCRIPTION=Nibbles clone for Gnome
+EAPI=5
+HOMEPAGE=https://wiki.gnome.org/Nibbles
+KEYWORDS=~amd64
+LICENSE=GPL-2+
+RDEPEND=dev-libs/glib:2 >=gnome-base/librsvg-2.32:2 >=media-libs/clutter-1:1.0 >=media-libs/clutter-gtk-0.91.6:1.0 >=media-libs/libcanberra-0.26[gtk3] >=x11-libs/gtk+-3.4:3 !gnome-extra/gnome-games
+SLOT=0
+SRC_URI=mirror://gnome/sources/gnome-nibbles/3.8/gnome-nibbles-3.8.0.tar.xz
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	games	0fb7637597e0869f6c8be79b11d0135a	gnome-games	88df68daf878203349ecc9ac923271bd	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	7976d3f4d0c0816c67033d3dcd4d9472	gnome2-utils	794d2847b4af390a1e020924876c8297	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=737613a8e9016305ce5f1c34ed2154a2
