@@ -1,8 +1,8 @@
 DEFINED_PHASES=compile configure install prepare test
 DEPEND=virtual/blas virtual/lapack virtual/pkgconfig doc? ( virtual/latex-base dev-texlive/texlive-latexextra )
 DESCRIPTION=Just Another Gibbs Sampler for Bayesian MCMC simulation
-EAPI=4
-HOMEPAGE=http://www-fis.iarc.fr/~martyn/software/jags/
+EAPI=5
+HOMEPAGE=http://mcmc-jags.sourceforge.net/
 IUSE=doc
 KEYWORDS=amd64 x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
@@ -10,4 +10,4 @@ RDEPEND=virtual/blas virtual/lapack
 SLOT=0
 SRC_URI=mirror://sourceforge/project/mcmc-jags/JAGS/3.x/Source/JAGS-3.3.0.tar.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	0954dce983a8c7cfe4e2b55263cb7a05	eutils	63afaaed8aa819fdcb814c7cd39495a2	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=73e47e50b986b9a6ea7e13f53fe0318f
+_md5_=9ec4bab3e06313ee7fb3aa0eedcdcc68
