@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST JAGS-3.3.0.tar.gz 1672361 SHA256 8a3755c8e8cd5a2d68a465d56f054f1380fa7e2b602bfe65d360eb23e5b6101a SHA512 2c4bb28b1eb49f89cd0d19a19b7e9af1b8f2ecccceadc6b85cf3c1db38ffd5e03469d940579c9cbe67a3986c1e8b41b83a299ced412d566240c78a6aa13024c7 WHIRLPOOL 7fb98f431f3a374ced0a7db1c867a5226e9ebd9efdba76eef33b35e5bf506f1aa1186ed8f6d9a29136efcd97f1ede44a00efea6e9095273f79800f9158faefec
-EBUILD jags-3.3.0.ebuild 1102 SHA256 e2a25a7f04e8cb6e6ed7a585e5a0df62d9027a26ac3a45e01c1224a55d67bb8f SHA512 ef7e9e582ab2906e44ec1b765dc4e8f9887cb1a556052f97db1eb6402a916e1af835b9bf135d4db55a05a458aa876d031dd532402aafab6f53a0475212e7c6fe WHIRLPOOL 682cf65aacb26238017e7c4ddaea50ef1b24cc0196a946ed3581eaf789e70594d12a1ad9bea85b5c38fb6e566bb97fde40261b3ecb435f4b685d6314b5f47f81
-MISC ChangeLog 1991 SHA256 8d9f65372d4d4bce5aa068741c1a8e7a7ac2b175cd44a8d9d9fc3e4ebd6e06df SHA512 2922db7e5feaa3927c4907a45b2d506bdc940a8c9d0987ed52eed3679f8ec330dd5673cc74eb5bf3de4eaf7004b22577d5bd0472420c41f982b22eb2fbf7774a WHIRLPOOL 6950aa06f25cd2f81faf4a77e3745e3647c173663e855279935d5cb347701be4309e900297ae8970c38cf4df9e0e8f50d2c13e8dd283d434e2e0c3b1a3c9f8c9
-MISC metadata.xml 674 SHA256 62451567ad0037fd7559d033d99fedbee57920488da96b553140ef98ff522c10 SHA512 8ed4e8244907ce535770f335a62ff47c330ba7dcdc81e9ce28240dd1b0f880b2bfee3af3bf0f34c169cba1277765cb56515f8925bb2bc552e28975e19cd1c4d2 WHIRLPOOL a291bfc41ac5388669e2974d3dbacfde4fe001380fdafea5148a18f7adb01b71779d0854b95b82993b5a488cfd0500201d60d82ab3408929cdc5892dc0fabe89
+EBUILD jags-3.3.0.ebuild 1090 SHA256 d918de13c8d931e71ee85c82fd71a3e02278233f01038594729167399d77c1d9 SHA512 0a95e25b0bf47d98940265c00b895aaea82558186d3410590f7f7a134b031d616abebff3a060ca9b3b2314e1358831336e80c4fb74eb31a65c007ff4b880245c WHIRLPOOL 7ea009ff7c72a844265845dbdca0fcde6591eb33176dd6bab9691399e131fd4e4e7252094dd3610f01cadec11deca099f3422b9c091e587e9f31e85aca395873
+MISC ChangeLog 2121 SHA256 7ec828f2fc41152a912fa69474398e75e6ee195fa9aba0b811171c876fd25b41 SHA512 86b2fd83b5e338aabd3e41b084f2378ee91ff521c268799a3c1b7a489568dbdda113e964570801d975695540d5bde95422a48cff782b0f7d4c1347ea1fa15585 WHIRLPOOL 12e915c5d0eeac9b0ba4bbcd0b2d390489d4c35341ac7cbff9d1ae8df89e673e6835b2212ea396d36f254b60f2ed81dc0c89546198437d1d19dc65b4f6e0ee38
+MISC metadata.xml 670 SHA256 4c66821b30a3d7a28f5cce74ad3ead7999ace229fd66d3ebccb278a7d244300f SHA512 f9cbcbf218d2503e23cdff893ed2e397b3a24c2706f823dfbc746d03c2b2157e8096acf056e69480bd5c3fce6f52d8c5130e94cb8a33a6ecce8fa3a890d6c243 WHIRLPOOL 69b8bfafe20d36d7f3f014dcc796e6362bd9e4108c035726ae4bd6027cb45286827dac763ab60681621cc79a905f18061a9f842761a73d0df74fef6e1696b029
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlEmIeMACgkQgAnW8HDreRaxogCdFhfGsbOCyr0wjg7BdXht4vbb
-qAAAn1KQLCZCNRNAzwrC97DW4A8xLyuK
-=A731
+iEYEAREIAAYFAlIJV/YACgkQ1ycZbhPLE2Bg4wCfXb96rSdzd/hkTOIuBgzKG+A3
+uMgAni7nVoeJTI21aj9/ZZDOacu0ktyY
+=fOe9
 -----END PGP SIGNATURE-----
