@@ -1,0 +1,10 @@
+# ChangeLog for games-arcade/gnome-nibbles
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/gnome-nibbles/ChangeLog,v 1.1 2013/08/12 21:58:39 eva Exp $
+
+*gnome-nibbles-3.8.0 (12 Aug 2013)
+
+  12 Aug 2013; Gilles Dartiguelongue <eva@gentoo.org>
+  +gnome-nibbles-3.8.0.ebuild, +metadata.xml:
+  Add game splitted from gnome-games by upstream.
+
